...
        placeholder = {
            Text(stringResource(R.string.search_movie))
        },
        modifier = modifier
            .fillMaxWidth()
            .heightIn(min = 56.dp)
            .testTag("SearchField"),
        keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
        keyboardActions = KeyboardActions(onDone = {
            keyboardController?.hide()
            onSearchFinished()
        })
    )
...
